--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 1.3:
+ - fixed overflow handling in IEEE-754 formats with directed rounding
+
 Version 1.2:
  - added IEEE-754 binary32 and 64 formats, including infinities and NaN
 
