--- a/NEWS
+++ b/NEWS
@@ -32,13 +32,16 @@ Version 2.0.0:
    . Fcore_Raux -> Fcore_Zaux
    . Fcalc_digits -> Fcore_digits
    . Fappli_IEEE -> Fappli_IEEE_bits
+ - renamed functions:
+   . canonic_exponent -> canonic_exp
+   . digits -> Zdigits
  - renamed theorems more uniformly:
    . Rabs_Rminus_pos -> Rabs_minus_le
    . exp_increasing_weak -> exp_le
    . ln_beta_monotone -> ln_beta_le
    . ln_beta_monotone_abs -> ln_beta_le_abs
-   . abs_F2R -> F2R_abs (changed direction)
-   . opp_F2R -> F2R_opp (changed direction)
+   . abs_F2R -> F2R_Zabs (changed direction)
+   . opp_F2R -> F2R_Zopp (changed direction)
    . scaled_mantissa_bpow -> scaled_mantissa_mult_bpow
    . round_monotone -> round_le
    . round_monotone_l -> round_ge_generic
@@ -46,7 +49,7 @@ Version 2.0.0:
    . round_monotone_abs_l -> abs_round_ge_generic
    . round_monotone_abs_r -> abs_round_le_generic
    . generic_format_canonic_exponent -> generic_format_F2R (modified hypothesis)
-   . canonic_exponent_round -> canonic_exponent_round_ge
+   . canonic_exponent_round -> canonic_exp_round_ge
    . generic_N_pt -> round_N_pt
    . round_pred_pos_imp_rnd -> round_pred_ge_0
    . round_pred_rnd_imp_pos -> round_pred_gt_0
@@ -68,6 +71,57 @@ Version 2.0.0:
    . FTZ_round_small -> round_FTZ_small
    . FLT_canonic_FLX -> canonic_exp_FLT_FLX
    . FLT_canonic_FIX -> canonic_exp_FLT_FIX
+   . canonic_exponent_opp -> canonic_exp_opp
+   . canonic_exponent_abs -> canonic_exp_abs
+   . canonic_exponent_fexp -> canonic_exp_fexp
+   . canonic_exponent_fexp_pos -> canonic_exp_fexp_pos
+   . canonic_exponent_DN -> canonic_exp_DN
+   . canonic_exp_ge -> abs_lt_bpow_prec (modified hypotheses)
+   . Fopp_F2R -> F2R_opp
+   . Fabs_F2R -> F2R_abs
+   . plus_F2R -> F2R_plus
+   . minus_F2R -> F2R_minus
+   . mult_F2R -> F2R_mult
+   . digits_abs -> Zdigits_abs
+   . digits_ge_0 -> Zdigits_ge_0
+   . digits_gt_0 -> Zdigits_gt_0
+   . ln_beta_F2R_Zdigits -> ln_beta_F2R_Zdigits
+   . digits_shift -> Zdigits_mult_Zpower
+   . digits_Zpower -> Zdigits_Zpower
+   . digits_le -> Zdigits_le
+   . lt_digits -> lt_Zdigits
+   . Zpower_le_digits -> Zpower_le_Zdigits
+   . digits_le_Zpower -> Zdigits_le_Zpower
+   . Zpower_gt_digits -> Zpower_gt_Zdigits
+   . digits_gt_Zpower -> Zdigits_gt_Zpower
+   . digits_mult_strong -> Zdigits_mult_strong
+   . digits_mult -> Zdigits_mult
+   . digits_mult_ge -> Zdigits_mult_ge
+   . digits_shr -> Zdigits_div_Zpower
+   . format_add -> generic_format_plus_prec (modified hypothesis)
+   . format_nx -> ex_Fexp_canonic
+generic_relative_error relative_error
+generic_relative_error_ex relative_error_ex
+generic_relative_error_F2R relative_error_F2R_emin
+generic_relative_error_F2R_ex relative_error_F2R_emin_ex
+generic_relative_error_2 relative_error_round
+generic_relative_error_F2R_2 relative_error_round_F2R_emin
+generic_relative_error_N relative_error_N 
+generic_relative_error_N_ex relative_error_N_ex
+generic_relative_error_N_F2R relative_error_N_F2R_emin
+generic_relative_error_N_F2R_ex relative_error_N_F2R_emin_ex
+generic_relative_error_N_2 relative_error_N_round
+generic_relative_error_N_F2R_2 relative_error_N_round_F2R_emin
+relative_error_FLT_F2R  relative_error_FLT_F2R_emin
+relative_error_FLT_F2R_ex relative_error_FLT_F2R_emin_ex 
+relative_error_N_FLT_2 relative_error_N_FLT_round
+relative_error_N_FLT_F2R relative_error_N_FLT_F2R_emin
+relative_error_N_FLT_F2R_ex relative_error_N_FLT_F2R_emin_ex
+relative_error_N_FLT_F2R_2 relative_error_N_FLT_round_F2R_emin
+relative_error_FLX_2 relative_error_FLX_round
+relative_error_N_FLX_2 relative_error_N_FLX_round
+
+
 
 Version 1.4.0:
  - improved efficiency of IEEE-754 addition
