--- a/NEWS
+++ b/NEWS
@@ -100,26 +100,26 @@ Version 2.0.0:
    . digits_shr -> Zdigits_div_Zpower
    . format_add -> generic_format_plus_prec (modified hypothesis)
    . format_nx -> ex_Fexp_canonic
-generic_relative_error relative_error
-generic_relative_error_ex relative_error_ex
-generic_relative_error_F2R relative_error_F2R_emin
-generic_relative_error_F2R_ex relative_error_F2R_emin_ex
-generic_relative_error_2 relative_error_round
-generic_relative_error_F2R_2 relative_error_round_F2R_emin
-generic_relative_error_N relative_error_N 
-generic_relative_error_N_ex relative_error_N_ex
-generic_relative_error_N_F2R relative_error_N_F2R_emin
-generic_relative_error_N_F2R_ex relative_error_N_F2R_emin_ex
-generic_relative_error_N_2 relative_error_N_round
-generic_relative_error_N_F2R_2 relative_error_N_round_F2R_emin
-relative_error_FLT_F2R  relative_error_FLT_F2R_emin
-relative_error_FLT_F2R_ex relative_error_FLT_F2R_emin_ex 
-relative_error_N_FLT_2 relative_error_N_FLT_round
-relative_error_N_FLT_F2R relative_error_N_FLT_F2R_emin
-relative_error_N_FLT_F2R_ex relative_error_N_FLT_F2R_emin_ex
-relative_error_N_FLT_F2R_2 relative_error_N_FLT_round_F2R_emin
-relative_error_FLX_2 relative_error_FLX_round
-relative_error_N_FLX_2 relative_error_N_FLX_round
+   . generic_relative_error -> relative_error
+   . generic_relative_error_ex -> relative_error_ex
+   . generic_relative_error_F2R -> relative_error_F2R_emin
+   . generic_relative_error_F2R_ex -> relative_error_F2R_emin_ex
+   . generic_relative_error_2 -> relative_error_round
+   . generic_relative_error_F2R_2 -> relative_error_round_F2R_emin
+   . generic_relative_error_N -> relative_error_N 
+   . generic_relative_error_N_ex -> relative_error_N_ex
+   . generic_relative_error_N_F2R -> relative_error_N_F2R_emin
+   . generic_relative_error_N_F2R_ex -> relative_error_N_F2R_emin_ex
+   . generic_relative_error_N_2 -> relative_error_N_round
+   . generic_relative_error_N_F2R_2 -> relative_error_N_round_F2R_emin
+   . relative_error_FLT_F2R  -> relative_error_FLT_F2R_emin
+   . relative_error_FLT_F2R_ex -> relative_error_FLT_F2R_emin_ex 
+   . relative_error_N_FLT_2 -> relative_error_N_FLT_round
+   . relative_error_N_FLT_F2R -> relative_error_N_FLT_F2R_emin
+   . relative_error_N_FLT_F2R_ex -> relative_error_N_FLT_F2R_emin_ex
+   . relative_error_N_FLT_F2R_2 -> relative_error_N_FLT_round_F2R_emin
+   . relative_error_FLX_2 -> relative_error_FLX_round
+   . relative_error_N_FLX_2 -> relative_error_N_FLX_round
 
 
 
