--- a/NEWS
+++ b/NEWS
@@ -35,6 +35,12 @@ Version 2.0.0:
  - renamed functions:
    . canonic_exponent -> canonic_exp
    . digits -> Zdigits
+   . bounded_prec -> canonic_mantissa
+   . Bsign_FF -> sign_FF
+   . shl -> shl_align
+   . shl_fexp -> shl_align_fexp
+   . binary_round_sign -> binary_round_aux
+   . binary_round_sign_shl -> binary_round
  - renamed theorems more uniformly:
    . Rabs_Rminus_pos -> Rabs_minus_le
    . exp_increasing_weak -> exp_le
@@ -120,7 +126,15 @@ Version 2.0.0:
    . relative_error_N_FLT_F2R_2 -> relative_error_N_FLT_round_F2R_emin
    . relative_error_FLX_2 -> relative_error_FLX_round
    . relative_error_N_FLX_2 -> relative_error_N_FLX_round
-
+   . canonic_bounded_prec -> canonic_canonic_mantissa 
+   . B2R_lt_emax -> abs_B2R_lt_emax
+   . binary_unicity -> B2FF_inj
+   . finite_binary_unicity -> B2R_inj
+   . binary_round_sign_correct -> binary_round_aux_correct
+   . shl_correct -> shl_align_correct
+   . snd_shl -> snd_shl_align 
+   . shl_fexp_correct -> shl_align_fexp_correct 
+   . binary_round_sign_shl_correct -> binary_round_correct
 
 
 Version 1.4.0:
