--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 2.3.0:
+ - moved some lemmas from Fcalc_digits to Fcore_digits and made them axiom-free
+ - used the square root from the standard library instead of a custom one
+ - added an example about sqrt(sqr(x))
+
 Version 2.2.2:
  - fixed install target for case-insensitive filesystems
 
