--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 2.5.2:
+ - ensured compatibility from Coq 8.4 to 8.6
+
 Version 2.5.1:
  - ensured compatibility with both Coq 8.4 and 8.5
 
