--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Version 3.0.0:
  - renamed canonic_exp into cexp, canonic into canonical
  - changed FLX, FIX, FLT, FLXN, FTZ_format into inductive types
  - changed nan_pl into a boolean predicate
+ - replaced Z2R with Coq 8.7's IZR
 
 Version 2.5.2:
  - ensured compatibility from Coq 8.4 to 8.6
