--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 2.6.1:
+ - ensured compatibility from Coq 8.4 to 8.8
+
 Version 2.6.0:
  - ensured compatibility from Coq 8.4 to 8.7
  - removed some hypotheses on some lemmas of Fcore_ulp
